--- a/HTML/accueil.html
+++ b/HTML/accueil.html
@@ -27,9 +27,9 @@
       <div>
          <ul>
             <li><a href="https://gallica.bnf.fr/ark:/12148/btv1b84259980/f1.item">Lien vers le manuscrit</a></li>
-            <li><a href="/home/tnah/Bureau/Devoir%20XSLT/HTML/facsimile.html">Transcription facsmiliaire</a></li>
-            <li><a href="/home/tnah/Bureau/Devoir%20XSLT/HTML/normalise.html">Transcription normalisée</a></li>
-            <li><a href="/home/tnah/Bureau/Devoir%20XSLT/HTML/info.html">Informations sur le manuscrit</a></li>
+            <li><a href="./facsimile.html">Transcription facsmiliaire</a></li>
+            <li><a href="./normalise.html">Transcription normalisée</a></li>
+            <li><a href="./info.html">Informations sur le manuscrit</a></li>
          </ul>
       </div>
    </body>
