--- a/HTML/info.html
+++ b/HTML/info.html
@@ -54,10 +54,10 @@
                   rappelant le texte.</p>
             </div><a href="https://archivesetmanuscrits.bnf.fr/ark:/12148/cc50522d">Pour en savoir plus</a><div>
                <ul>
-                  <li><a href="/home/tnah/Bureau/Devoir%20XSLT/HTML/accueil.html">Accueil</a></li>
+                  <li><a href="./accueil.html">Accueil</a></li>
                   <li><a href="https://gallica.bnf.fr/ark:/12148/btv1b84259980/f1.item">Lien vers le manuscrit</a></li>
-                  <li><a href="/home/tnah/Bureau/Devoir%20XSLT/HTML/facsimile.html">Transcription facsmiliaire</a></li>
-                  <li><a href="/home/tnah/Bureau/Devoir%20XSLT/HTML/normalise.html">Transcription normalisée</a></li>
+                  <li><a href="./facsimile.html">Transcription facsmiliaire</a></li>
+                  <li><a href="./normalise.html">Transcription normalisée</a></li>
                </ul>
             </div>
          </div>
