--- a/HTML/facsimile.html
+++ b/HTML/facsimile.html
@@ -205,10 +205,10 @@
          </div>
          <div>
             <ul>
-               <li><a href="/home/tnah/Bureau/Devoir%20XSLT/HTML/accueil.html">Accueil</a></li>
+               <li><a href="./accueil.html">Accueil</a></li>
                <li><a href="https://gallica.bnf.fr/ark:/12148/btv1b84259980/f1.item">Lien vers le manuscrit</a></li>
-               <li><a href="/home/tnah/Bureau/Devoir%20XSLT/HTML/normalise.html">Transcription normalisée</a></li>
-               <li><a href="/home/tnah/Bureau/Devoir%20XSLT/HTML/info.html">Informations sur le manuscrit</a></li>
+               <li><a href="./normalise.html">Transcription normalisée</a></li>
+               <li><a href="./info.html">Informations sur le manuscrit</a></li>
             </ul>
          </div>
       </div>
