dernières modif + ajout condition

--- a/HTML/accueil.html
+++ b/HTML/accueil.html
@@ -3,7 +3,7 @@
       <h1>Recueil de textes, Vie de Saints</h1>
       <div>
          <h2>Préambule</h2>
-         <p n="1">Le choix a été fait de correspondre au manuscrit le plus précisément
+         <p>Le choix a été fait de correspondre au manuscrit le plus précisément
             possible. Pour ce faire, les minuscules et majuscules des lettres "u" et "i" ont été
             conservées malgré leur emploi pour une autre lettre, respectivement le "v" et le "j".
             Pour marquer cela dans l'encodage, la balise "choice" a été utilisée avec "orig" et
@@ -20,7 +20,7 @@
       </div>
       <div>
          <h2>Concernant la publication</h2>
-         <p n="1">Edition encodée par Claire Jahan, d'après Recueil de
+         <p>Edition encodée par Claire Jahan, d'après Recueil de
             textes, Vie de Saints, un manuscrit édité dans les années 1285.
             Encodage à partir du folio 228v jusqu'au folio 229v.</p>
       </div>
